<resources>
    <!--IMCApp-->
    <string name="app_name">MenuConDiferentesFunciones</string>
    <string name="male">hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu Resultado</string>

    <string name="recalculate">Re-calcular</string>
    <string name="error">Error</string>

    <string name="tBajoPeso">Bajo peso</string>
    <string name="dBajoPeso">Estás por debajo de lo optimo para tu peso y altura</string>

    <string name="tPesoNormal">Peso normal</string>
    <string name="dPesoNormal">Estás en lo optimo para tu peso y altura</string>

    <string name="tSobrePeso">Sobrepeso</string>
    <string name="dSobrePeso">Estás por encima de lo optimo para tu peso y altura</string>

    <string name="tObesidad">Obesidad</string>
    <string name="dObesidad">Estás MUY por encima de lo optimo para tu peso y altura</string>

    <!--ListApp-->
    <string name="listTitle">NO OLVIDES NADA</string>
    <string name="listCategories">CATEGORIAS</string>
    <string name="listTask">TAREAS</string>
    <string name="listCategoryC">Compras</string>
    <string name="listCategoryN">Notas</string>
    <string name="listCategoryO">Otros</string>
    <string name="listDialogAdd">Añade una tarea</string>
    <string name="listbtnDialogAdd">CREAR TAREA</string>

    <!--ConsorsioApp-->
    <string name="ConBtnNew">Nuevo Docente</string>
    <string name="ConCod">Codigo</string>
    <string name="ConNom">Nombre</string>
    <string name="ConPat">Apellido Paterno</string>
    <string name="ConMat">Apellido Materno</string>
</resources>