<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="15dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:duplicateParentState="true"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConCod"/>

            <TextView
                android:id="@+id/tvCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConNom"/>

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConPat"/>

            <TextView
                android:id="@+id/tvPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConMat"/>

            <TextView
                android:id="@+id/tvMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>